add conf